--- a/front-end/src/pages/login/Login.module.scss
+++ b/front-end/src/pages/login/Login.module.scss
@@ -82,7 +82,6 @@
     form {
       display: flex;
       flex-direction: column;
-      gap: 20px;
     }
   }
 }
