--- a/front-end/src/pages/register/Register.module.scss
+++ b/front-end/src/pages/register/Register.module.scss
@@ -62,7 +62,6 @@
 }
 
 .Form {
-  flex: 1;
   display: flex;
   align-items: center;
 
@@ -84,7 +83,6 @@
     form {
       display: flex;
       flex-direction: column;
-      gap: 20px;
     }
   }
 }
